tests/testfiles/passing/invalid_identifiers/keyword_as_id_float.c
/* Keyword as identifier: float */
int main() {
    int float;
}